<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BhargavFragmentAddTest">
    <RelativeLayout
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/bhargav_patient_list"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="Blood Pressure"
            android:id="@+id/bhargav_blood_pressure_lable"
            android:layout_width="match_parent"
            android:fontFamily="@font/leaguespartan"
            android:layout_marginBottom="14dp"
            android:layout_below="@+id/bhargav_patient_list"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/bhargav_blood_pressure"
            android:layout_below="@+id/bhargav_blood_pressure_lable"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_marginBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_weight="1"
                android:text="@string/blood_pressure_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:layout_weight="1"
                android:text="@string/blood_pressure_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <TextView
            android:id="@+id/bhargav_cholesterol_lable"
            android:text="@string/cholesterol"
            android:fontFamily="@font/leaguespartan"
            android:layout_below="@id/bhargav_blood_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/bhargav_cholesterol_lable"
            android:background="@drawable/background_outline"
            android:id="@+id/bhargav_cholesterol"
            android:hint="Enter Cholesterol"
            android:fontFamily="@font/leaguespartan"
            android:layout_width="match_parent"
            android:padding="14dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/bhargav_date_lable"
            android:text="@string/temprature"
            android:fontFamily="@font/leaguespartan"
            android:layout_below="@id/bhargav_cholesterol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/bhargav_date_lable"
            android:background="@drawable/background_outline"
            android:id="@+id/bhargav_temprature_lable"
            android:hint="@string/enter_temprature"
            android:fontFamily="@font/leaguespartan"
            android:layout_width="match_parent"
            android:padding="14dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="10dp"
            android:id="@+id/bhargav_temprature"
            android:text="@string/test_date"
            android:fontFamily="@font/leaguespartan"
            android:layout_below="@id/bhargav_temprature_lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/bhargav_temprature"
            android:id="@+id/bhargav_test_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_outline"
            android:padding="14dp"
            android:text="@string/date"
            android:textColor="@color/textColor"
            android:textSize="12dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" />
        <Button
            android:text="@string/add_test"
            android:layout_alignParentBottom="true"
            android:background="@color/buttonColor"
            android:textColor="@color/_e2e8f6"
            android:layout_width="match_parent"
            android:id="@+id/bhargav_add_test"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</FrameLayout>