<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BhargavFragmentAddPatient">
    <RelativeLayout
        android:id="@+id/bhargav_add_patient_form"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/bhargav_first_name_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bhargav_patient_first_name_lable"
                android:layout_width="match_parent"
                android:text="@string/first_name"
                android:textSize="16dp"
                android:fontFamily="@font/leaguespartan"
                android:textColor="@color/headingTextColor"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bhargav_patient_first_name"
                android:layout_below="@+id/bhargav_patient_first_name_lable"
                android:hint="@string/patient_first_name"
                android:layout_width="match_parent"
                android:fontFamily="@font/leaguespartan"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/bhargav_patient_first_name_error_lable"
                android:layout_width="match_parent"
                android:text="@string/first_name"
                android:textSize="20dp"
                android:visibility="gone"
                android:fontFamily="@font/leaguespartan"
                android:layout_below="@+id/bhargav_patient_first_name"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bhargav_last_name_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_below="@+id/bhargav_first_name_layout"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bhargav_patient_last_name_lable"
                android:layout_width="match_parent"
                android:text="@string/last_name"
                android:fontFamily="@font/leaguespartan"
                android:textSize="16dp"
                android:textColor="@color/headingTextColor"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/bhargav_patient_last_name"
                android:hint="@string/patient_last_name"
                android:fontFamily="@font/leaguespartan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bhargav_department_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/bhargav_last_name_layout"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bhargav_patient_department_lable"
                android:layout_width="match_parent"
                android:text="@string/department_lable"
                android:fontFamily="@font/leaguespartan"
                android:textSize="16dp"
                android:textColor="@color/headingTextColor"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/bhargav_department_list"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown"
                android:fontFamily="@font/leaguespartan"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/bhargav_add_patient"
            android:text="@string/add_patient"
            android:background="@color/buttonColor"
            android:foregroundGravity="bottom"
            android:layout_alignParentBottom="true"
            android:textColor="#ffff"
            android:fontFamily="@font/leaguespartan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</FrameLayout>