<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BhargavFragmentSearch">

    <LinearLayout
        android:weightSum="2"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:foregroundGravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0px">
            <TextView
                android:text="@string/search_by_patient_id"
                android:layout_width="match_parent"
                android:textSize="16dp"
                android:fontFamily="@font/leaguespartan"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/enter_patient_id"
                android:layout_width="match_parent"
                android:fontFamily="@font/leaguespartan"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"/>
            <Button
                android:background="@color/buttonColor"
                android:textColor="#ffff"
                android:layout_marginBottom="15dp"
                android:text="@string/search_by_patient_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="0px"
            >
            <TextView
                android:text="@string/filter_department"
                android:layout_width="match_parent"
                android:textSize="16dp"
                android:fontFamily="@font/leaguespartan"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/bhargav_filter"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:background="@color/buttonColor"
                android:layout_marginBottom="15dp"
                android:textColor="#ffff"
                android:text="@string/filter_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>